--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<section class="schedule">
 					<h3>Mon - Sun : 7:00AM - 8:00PM</h3>
 				</section>
-				<section class="arrows">
+				<section class="">
 					<img class="leftArrow arrow" src="images/rightArrow icon.png" alt="left arrow">
 					<img class="rightArrow arrow" src="images/rightArrow icon.png" alt="right arrow">
 				</section>
